Fixed overflowing nav-bar breaking responsive design

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,26 +46,30 @@ a:visited {
     color: black;
 }
 
-
-
 .navbar {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
     background-color: var(--primary-color);
-    
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    
 }
 
+.navbar .container {
+    display: grid;
+    grid-template-columns: auto minmax(0, 1fr) auto;
+    max-width: 1500px;
+    margin: 0 auto;
+}
+
+/* .navbar .container {
+    
+} */
+
 .navbar-link {
-    padding: 0em 0.5em;
-    margin: 1em;
+    padding: 0.5em 0.5em;
+    margin: 0 auto;
 }
 
 .logo {
-    font-size: 120%;
-    margin: 5% auto;
+    font-size: 140%;
 }
 
 .navbar-link:hover, .logo:hover {
@@ -167,6 +171,9 @@ a:visited {
     }   
     .face-button {
         opacity: 0%;
+    }
+    .logo {
+        font-size: 100%;
     }
 }
 
@@ -277,7 +284,7 @@ h1 > strong::after {
 
 .about-card  {
     margin-top: 3%;
-    margin-bottom: -3%; 
+    margin-bottom: -15px; 
     min-width: min(200px, 100%);
     padding: 1em;
 
